--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -47,56 +47,35 @@
                     <div class="card mt-1">
                         <div class="card-header"><h5>Lesson {{lesson.order|add:1}}: {{lesson.title}}</h5></div>
                         <div class="card-body">{{lesson.content}}</div>
+                            <button class="btn btn-info w-100 px-2" type="button" data-toggle="collapse" data-target="#lesson{{lesson.id}}" aria-expanded="false" aria-controls="a">
+                                Start Exam
+                            </button>
+                            <div class="collapse" id="lesson{{lesson.id}}">
+                                <div class="card card-body">
+                                    <div class="card-columns-vertical">
+                                        <form class="card mt-1" action="{% url 'onlinecourse:submit' course.id %}" method="post">
+                                        {% csrf_token %}
+                                        {% for question in lesson.question_set.all %}
+                                            <div class="card-header"><h5>{{question.question_text}}</h5></div>
+                                            <div class="card-body">
+                                                {% for choice in question.choice_set.all %}
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" name="choice{{choice.id}}" value="{{choice.id}}" id="choice{{choice.id}}" />
+                                                    <label class="form-check-label" for={{choice.id}}>
+                                                        {{choice.choice_text}}
+                                                    </label>
+                                                </div>
+                                                {% endfor %}
+                                            </div>
+                                            {% endfor %}
+                                            <input  class="w-100 btn btn-success" type="submit"  value="Submit">
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                 {% endfor %}
             </div>
-            <!-- Task: show questions and choices -->
-            <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
-            https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
-
-            <!--
-
-            A collapse example here:
-            <div id="exam" class="collapse">
-                Click to expand elements within the collapse div
-                </div>
-
-            -->
-
-            <!-- <HINT> If user is authenticated, show course exam with a list of question -->
-
-            <!-- <HINT> Each example will have many questions -->
-
-            <!-- <HINT> Each question will have many choices -->
-
-
-            <!-- <HINT> Create a form to collect the selected choices for all questions -->
-            <!-- <HINT> For each question choice, you may create a checkbox input like
-            <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
-            -->
-
-            <!-- A choice submission form example
-            <form id="questionform" action="point to a submit view" method="post">
-                        ... for each question in the course ...
-                        <div class="card mt-1">
-                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
-                            {% csrf_token %}
-                            <div class="form-group">
-                               ... for each choice in the question ...
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="checkbox" name="choice_{{choice.id}}"
-                                               class="form-check-input" id="{{choice.id}}"
-                                               value="{{choice.id}}">{{ choice.choice_text }}
-                                    </label>
-                                </div>
-                            </div>
-                        </div>
-                    <input class="btn btn-success btn-block" type="submit" value="Submit">
-            </form> -->
-
-            <!--Check here to see more details Bootstrap checkbox
-             https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
     </div>
 </body>
 </html>
