--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,18 +38,51 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
-       <!--HINT Display passed info -->
+       <b>Congratulations, {{user.username}}!</b> You have passed the exam and completed the course with score {{grade}} / 100
     </div>
-        {% else %}
-        <div class="alert alert-danger">
-            <!--HINT Display failed info -->
-        </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
+    {% else %}
+    <div class="alert alert-danger">
+        <b>Failed</b> Sorry, {{user.username}}! You have failed exame with {{grade}} / 100
+    </div>
+    <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+    {% endif %}
+    <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+        {% for lesson in submission.enroll.course.lesson_set.all %}
+            {% for question in lesson.question_set.all %}
+                <div class="card-columns-vertical">
+                    <div class="card mt-1">
+                        <div class="card-header">
+                            <h5>{{question.question_text}}</h5>
+                        </div>
+                        <div class="card-body">
+                            {% for choice in question.choice_set.all %}
+                            <div class="form-check">
+                                {% if choice.is_correct and choice in submission.choices.all %}
+                                <span class="form-check-label text-success">
+                                    Correct answer: {{choice.choice_text}}
+                                </span>
+                                {% elif choice.is_correct and choice not in submission.choices.all %}
+                                <span class="form-check-label text-warning">
+                                    Not selected: {{choice.choice_text}}
+                                </span>
+                                {% elif not choice.is_correct and choice in submission.choices.all %}
+                                <span class="form-check-label text-danger">
+                                    False answer: {{choice.choice_text}}
+                                </span>
+                                {% else %}
+                                <span class="form-check-label">
+                                    {{choice.choice_text}}
+                                </span>
+                                {%  endif %}
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        {% endfor %}
     </div>
+</div>
 </body>
 </html>
